[Desenvolvimento] - Sistema para cadastrar automaticamente os usuárions no novo sistema (inicial)
[Modelagem]
- Cadastro automático e login único (inicial)

--- a/SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj
+++ b/SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj
@@ -9,10 +9,18 @@
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Projetos\SME-Pedagogico-Gestao\SME.Pedagogico.Gestao.WebApp\SME.Pedagogico.Gestao.WebApp.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -24,6 +32,11 @@
 
   <ItemGroup>
     <Folder Include="ClientApp\src\components\inputs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SME.Pedagogico.Gestao.Data\SME.Pedagogico.Gestao.Data.csproj" />
+    <ProjectReference Include="..\SME.Pedagogico.Gestao.Models\SME.Pedagogico.Gestao.Models.csproj" />
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
