--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.8.1",
         "bootstrap": "^4.3.1",
+        "draft-js": "^0.10.5",
         "jquery": "^3.4.0",
         "popper.js": "^1.14.7",
         "react": "^16.8.6",
