--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
@@ -6,6 +6,7 @@
         "@fortawesome/fontawesome-free": "^5.8.1",
         "bootstrap": "^4.3.1",
         "draft-js": "^0.10.5",
+        "echarts": "^4.2.1",
         "jquery": "^3.4.0",
         "popper.js": "^1.14.7",
         "react": "^16.8.6",
