--- a/SME.Pedagogico.Gestao.Data/SME.Pedagogico.Gestao.Data.csproj
+++ b/SME.Pedagogico.Gestao.Data/SME.Pedagogico.Gestao.Data.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="2.2.0" />
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL.Design" Version="1.1.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.4.0" />
   </ItemGroup>
 
 </Project>
