Correcao6727 [Sondagem] Alunos não estão mais aparecendo

--- a/SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj
+++ b/SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj
@@ -8,6 +8,7 @@
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
     <LangVersion>7.2</LangVersion>
+    <UserSecretsId>d07004a3-e9e5-4b26-80a7-61d45351e6bd</UserSecretsId>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
