--- a/SME.Pedagogico.Gestao.WebApp/Dockerfile.original
+++ b/SME.Pedagogico.Gestao.WebApp/Dockerfile.original
@@ -9,7 +9,7 @@ COPY ["SME.Pedagogico.Gestao.Data/SME.Pedagogico.Gestao.Data.csproj", "/SME.Peda
 COPY ["SME.Pedagogico.Gestao.Models/SME.Pedagogico.Gestao.Models.csproj", "SME.Pedagogico.Gestao.Models/"]
 COPY ["SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj", "SME.Pedagogico.Gestao.WebApp/"]
 COPY ["SME.Pedagogico.Gestao.ConsoleTeste/SME.Pedagogico.Gestao.ConsoleTeste.csproj", "SME.Pedagogico.Gestao.ConsoleTeste/"]
-RUN dotnet restore "SME.SGP.Api/SME.SGP.Api.csproj"
+RUN dotnet restore "SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj"
 COPY . .
 WORKDIR "/SME.Pedagogico.Gestao.WebApp"
 RUN dotnet build "SME.Pedagogico.Gestao.WebApp.csproj" -c Release -o /app
