--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
@@ -20,7 +20,8 @@
         "redux": "^4.0.5",
         "redux-persist": "^5.10.0",
         "redux-saga": "^1.0.2",
-        "rimraf": "^2.6.3"
+        "rimraf": "^2.6.3",
+        "shortid": "^2.2.15"
     },
     "devDependencies": {
         "ajv": "^6.9.1",
