--- a/.gitignore
+++ b/.gitignore
@@ -263,3 +263,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/SME.Pedagogico.Gestao.WebApp/Properties/launchSettings.json
