--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
@@ -9,6 +9,7 @@
         "echarts": "^4.2.1",
         "jquery": "^3.4.0",
         "popper.js": "^1.14.7",
+        "prop-types": "^15.7.2",
         "react": "^16.8.6",
         "react-dom": "^16.8.6",
         "react-redux": "^7.2.1",
@@ -21,7 +22,8 @@
         "redux-persist": "^5.10.0",
         "redux-saga": "^1.0.2",
         "rimraf": "^2.6.3",
-        "shortid": "^2.2.15"
+        "shortid": "^2.2.15",
+        "styled-components": "^5.2.0"
     },
     "devDependencies": {
         "ajv": "^6.9.1",
