--- a/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
+++ b/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.2.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
   </ItemGroup>
 
   <ItemGroup>
