--- a/SME.Pedagogico.Gestao.WebApp/Dockerfile.original
+++ b/SME.Pedagogico.Gestao.WebApp/Dockerfile.original
@@ -5,8 +5,12 @@ EXPOSE 443
 
 FROM microsoft/dotnet:2.2-sdk AS build
 
+COPY ["SME.Pedagogico.Gestao.Aplicacao/SME.Pedagogico.Gestao.Aplicacao.csproj", "/SME.Pedagogico.Gestao.Aplicacao/"]
 COPY ["SME.Pedagogico.Gestao.Data/SME.Pedagogico.Gestao.Data.csproj", "/SME.Pedagogico.Gestao.Data/"]
 COPY ["SME.Pedagogico.Gestao.Models/SME.Pedagogico.Gestao.Models.csproj", "SME.Pedagogico.Gestao.Models/"]
+COPY ["SME.Pedagogico.Gestao.Dominio/SME.Pedagogico.Gestao.Dominio.csproj", "SME.Pedagogico.Gestao.Dominio/"]
+COPY ["SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj", "SME.Pedagogico.Gestao.Infra/"]
+COPY ["SME.Pedagogico.Gestao.IoC/SME.Pedagogico.Gestao.IoC.csproj", "SME.Pedagogico.Gestao.IoC/"]
 COPY ["SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj", "SME.Pedagogico.Gestao.WebApp/"]
 COPY ["SME.Pedagogico.Gestao.ConsoleTeste/SME.Pedagogico.Gestao.ConsoleTeste.csproj", "SME.Pedagogico.Gestao.ConsoleTeste/"]
 RUN dotnet restore "SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj"
