Use case de impressão de relatórios Removendo códigos não utilizados

--- a/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
+++ b/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
@@ -13,4 +13,8 @@
     <ProjectReference Include="..\SME.Pedagogico.Gestao.Dominio\SME.Pedagogico.Gestao.Dominio.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
