--- a/SME.Pedagogico.Gestao.Aplicacao/SME.Pedagogico.Gestao.Aplicacao.csproj
+++ b/SME.Pedagogico.Gestao.Aplicacao/SME.Pedagogico.Gestao.Aplicacao.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.2.2" />
     <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
