--- a/SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj
+++ b/SME.Pedagogico.Gestao.WebApp/SME.Pedagogico.Gestao.WebApp.csproj
@@ -16,6 +16,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.15.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="3.1.8" />
