--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@fortawesome/fontawesome-free": "^5.8.1",
         "bootstrap": "^4.3.1",
+        "cross-domain-storage": "^2.0.7",
         "draft-js": "^0.10.5",
         "echarts": "^4.2.1",
         "jquery": "^3.4.0",
