--- a/SME.Pedagogico.Gestao.Aplicacao/SME.Pedagogico.Gestao.Aplicacao.csproj
+++ b/SME.Pedagogico.Gestao.Aplicacao/SME.Pedagogico.Gestao.Aplicacao.csproj
@@ -7,12 +7,14 @@
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.2.2" />
     <PackageReference Include="MediatR" Version="8.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="2.2.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
     <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SME.Pedagogico.Gestao.Data\SME.Pedagogico.Gestao.Data.csproj" />
     <ProjectReference Include="..\SME.Pedagogico.Gestao.Dominio\SME.Pedagogico.Gestao.Dominio.csproj" />
     <ProjectReference Include="..\SME.Pedagogico.Gestao.Infra\SME.Pedagogico.Gestao.Infra.csproj" />
     <ProjectReference Include="..\SME.Pedagogico.Gestao.Models\SME.Pedagogico.Gestao.Models.csproj" />
