Adicionado regra para funcionar as habas sondagem/relatorios de acordo com regra que existia no front

--- a/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
+++ b/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -10,6 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SME.Pedagogico.Gestao.Data\SME.Pedagogico.Gestao.Data.csproj" />
     <ProjectReference Include="..\SME.Pedagogico.Gestao.Dominio\SME.Pedagogico.Gestao.Dominio.csproj" />
   </ItemGroup>
 
