--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ bld/
 
 # Visual Studio 2015 cache/options directory
 .vs/
+.vscode/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
 
@@ -263,4 +264,8 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# WebApp
 /SME.Pedagogico.Gestao.WebApp/Properties/launchSettings.json
+/SME.Pedagogico.Gestao.WebApp/ClientApp/package-lock.json
+/SME.Pedagogico.Gestao.WebApp/ClientApp/yarn.lock
