--- a/SME.Pedagogico.Gestao.Models/SME.Pedagogico.Gestao.Models.csproj
+++ b/SME.Pedagogico.Gestao.Models/SME.Pedagogico.Gestao.Models.csproj
@@ -6,7 +6,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Institutional\" />
+    <Compile Remove="Institutional\**" />
+    <EmbeddedResource Remove="Institutional\**" />
+    <None Remove="Institutional\**" />
   </ItemGroup>
 
 </Project>
