--- a/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
+++ b/SME.Pedagogico.Gestao.Infra/SME.Pedagogico.Gestao.Infra.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Interfaces\**" />
+    <EmbeddedResource Remove="Interfaces\**" />
+    <None Remove="Interfaces\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="FluentValidation" Version="9.2.2" />
     <PackageReference Include="morelinq" Version="3.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
@@ -12,10 +18,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SME.Pedagogico.Gestao.Dominio\SME.Pedagogico.Gestao.Dominio.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Interfaces\" />
   </ItemGroup>
 
 </Project>
