--- a/SME.Pedagogico.Gestao.WebApp/appsettings.json
+++ b/SME.Pedagogico.Gestao.WebApp/appsettings.json
@@ -1,7 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=10.50.1.43;Port=5432;Database=db_pedagogicogestao_release;Username=usr_pedagogicogestao;Password=39162604;"
-    //"DefaultConnection_DEV": "Server=10.50.1.226;Port=5432;Database=db_pedagogicogestao;Username=usr_pedagogicogestao;Password=39162604;"
+    "DefaultConnection": "Server=localhost;Port=5432;Database=smeManagementDB;Username=postgres;Password=39162604;"
   },
   //"JwtSettings": {
   //    "Issuer": "https://10.50.1.11:61540/",
