--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
@@ -1,58 +1,57 @@
 {
-    "name": "SME.Pedagogico.Gestao.WebApp",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.8.1",
-        "bootstrap": "^4.3.1",
-        "cross-domain-storage": "^2.0.7",
-        "draft-js": "^0.10.5",
-        "echarts": "^4.2.1",
-        "jquery": "^3.4.0",
-        "popper.js": "^1.14.7",
-        "prop-types": "^15.7.2",
-        "react": "^16.8.6",
-        "react-dom": "^16.8.6",
-        "react-redux": "^7.2.1",
-        "react-router-bootstrap": "^0.24.4",
-        "react-router-dom": "^5.0.0",
-        "react-scripts": "^3.0.0",
-        "react-spring": "^8.0.19",
-        "reactstrap": "^6.3.0",
-        "redux": "^4.0.5",
-        "redux-persist": "^5.10.0",
-        "redux-saga": "^1.0.2",
-        "rimraf": "^2.6.3",
-        "shortid": "^2.2.15",
-        "styled-components": "^5.2.0"
-    },
-    "devDependencies": {
-        "ajv": "^6.9.1",
-        "babel-eslint": "10.0.1",
-        "cross-env": "^5.2.0",
-        "eslint": "^5.16.0",
-        "eslint-config-react-app": "^4.0.0",
-        "eslint-plugin-flowtype": "^2.50.3",
-        "eslint-plugin-import": "^2.14.0",
-        "eslint-plugin-jsx-a11y": "^6.2.1",
-        "eslint-plugin-react": "^7.11.1",
-        "redux-logger": "^3.0.6",
-        "typescript": "^3.4.3"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
-    },
-    "scripts": {
-        "start": "rimraf ./build && react-scripts start",
-        "build": "react-scripts build",
-        "test": "cross-env CI=true react-scripts test --env=jsdom",
-        "eject": "react-scripts eject",
-        "lint": "eslint ./src/"
-    },
-    "browserslist": [
-        ">0.2%",
-        "not dead",
-        "not ie <= 11",
-        "not op_mini all"
-    ]
+  "name": "SME.Pedagogico.Gestao.WebApp",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.8.1",
+    "antd": "^5.1.7",
+    "bootstrap": "^4.3.1",
+    "cross-domain-storage": "^2.0.7",
+    "draft-js": "^0.10.5",
+    "echarts": "^4.2.1",
+    "jquery": "^3.4.0",
+    "popper.js": "^1.14.7",
+    "prop-types": "^15.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^7.2.1",
+    "react-router-bootstrap": "^0.24.4",
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "^3.0.0",
+    "react-spring": "^8.0.19",
+    "reactstrap": "^6.3.0",
+    "redux": "^4.0.5",
+    "redux-persist": "^5.10.0",
+    "redux-saga": "^1.0.2",
+    "rimraf": "^2.6.3",
+    "shortid": "^2.2.15",
+    "styled-components": "^5.2.0"
+  },
+  "devDependencies": {
+    "ajv": "^6.9.1",
+    "cross-env": "^5.2.0",
+    "eslint-config-react-app": "^4.0.0",
+    "eslint-plugin-flowtype": "^2.50.3",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.11.1",
+    "redux-logger": "^3.0.6",
+    "typescript": "^3.4.3"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "scripts": {
+    "start": "rimraf ./build && react-scripts start",
+    "build": "react-scripts build",
+    "test": "cross-env CI=true react-scripts test --env=jsdom",
+    "eject": "react-scripts eject",
+    "lint": "eslint ./src/"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
