Matemática autoral 2023 - salvar dados
Co-authored-by: Guilherme Maciel da Rocha <guimacielr@gmail.com>

--- a/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
+++ b/SME.Pedagogico.Gestao.WebApp/ClientApp/package.json
@@ -10,6 +10,7 @@
     "draft-js": "^0.10.5",
     "echarts": "^4.2.1",
     "jquery": "^3.4.0",
+    "lodash": "^4.17.21",
     "popper.js": "^1.14.7",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
